# pcap_analyzer

./: .agent-notes  .coveragerc_temp  .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ADMIN_APPROVAL_TESTING_RESULTS.md  BEFORE_AFTER_CODE.md  CHANGELOG.md  CHANGELOG_PROGRESS_UX.md  COMMIT_HISTORY_REFONTE.md  CONTRIBUTING.md  CSRF_DEPLOYMENT_CHECKLIST.md  CSRF_IMPLEMENTATION.md  CSS_CLASSES_GUIDE.md  DELIVERABLES_v4.15.0.md  DESIGN_IMPROVEMENTS.md  DESIGN_UPLOAD_PAGE.md  DOCKER_POSTGRES_SETUP.md  Dockerfile  FICHIERS_MODIFIES.md  HISTORY_DESIGN_REFONTE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v4.15.0.md  ISSUE_10_ANALYSIS.md  LICENSE  LOADING_FUTURE_IDEAS.md  LOADING_OVERLAY_DESIGN.md  LOADING_OVERLAY_INDEX.md  LOADING_OVERLAY_README.md  LOADING_OVERLAY_RECAP.md  LOADING_OVERLAY_STATS.md  MANIFEST.in  MIGRATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PROPOSAL.md  PROGRESS_UX_REDESIGN.md  PROJET_DOCKERISATION.md  PULL_REQUEST.md  (+48 more)
.claude/: CHROME_SESSION_RESULTS.md  NEXT_SESSION_CHROME.md  README_CHROME_SESSION.md  SESSION_STATE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 2163cd9a7764_add_password_history_table.py  2bc03b947812_add_2fa_columns_to_users.py  c0989c735473_add_idx_users_created_at.py  dcd3f75e61c2_add_password_reset_tokens.py  eba0e1bcc7ec_initial_schema_with_user_approval.py
app/: __init__.py  auth.py  main.py
app/models/: schemas.py  user.py
app/security/: __init__.py  csrf.py
app/services/: analyzer.py  cleanup.py  database.py  email_service.py  password_reset_service.py  pcap_validator.py  postgres_database.py  user_database.py  worker.py
app/templates/: admin.html  base.html  change-password.html  forgot-password.html  history.html  loading_showcase.html  login.html  logout.html  profile.html  progress.html  register.html  reset-password.html  test_loading.html  upload.html
app/utils/: __init__.py  config.py  file_validator.py  migration.py  path_validator.py  rate_limiter.py
conductor/: BUG_REPORT_CLIENT_SIDE_AUTH.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/: ASSISTANT_REPORT_v4_28_2_v4_28_3.md  BUG_REPORT_USER_DELETION_ORPHANED_FILES.md  FEATURE_REQUEST_EMAIL_NOTIFICATIONS.md
config/: logging.yaml
data/: pcap_analyzer.db  test_v4273.db
docs/: ADMIN_APPROVAL_WORKFLOW.md  ADMIN_PANEL_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_PERFORMANCE.md  AUDIT_COMPLIANCE.md  AUDIT_LOGGING_IMPLEMENTATION.md  BUG_FIX_VALIDATION_v4.21.0.md  CHECKLIST_PERFORMANCE.md  COVERAGE_ANALYSIS.md  DATABASE_MIGRATION.md  DATA_RETENTION_POLICY.md  DECISIONS_TECHNIQUES.md  DESIGN_ARCHITECTURE.md  DESIGN_CODE_SNIPPETS.md  DESIGN_INDEX.md  DESIGN_MOCKUPS.md  DESIGN_README.md  DESIGN_SUMMARY.txt  DESIGN_SYSTEM.md  DESIGN_SYSTEM_REFERENCE.md  DOCKER.md  DOCKER_COMPOSE_GUIDE.md  EMAIL_SETUP.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_GUIDE.md  KUBERNETES.md  LETSENCRYPT.md  LOGGING.md  MIGRATION_GUIDE_v5.0.md  PERFORMANCE_BENCHMARKING.md  PHASE3_VERIFICATION.md  PLAN_PERFORMANCE.md  PLAN_SECURITE.md  POSTGRESQL_DEPLOYMENT.md  README_PACKET_TIMELINE_DESIGN.md  README_PERFORMANCE.md  RESOURCE_LIMITS.md  SECURITY_BEST_PRACTICES.md  SIEM_INTEGRATION.md  (+6 more)
docs/archive/: DECOMPRESSION_BOMB_IMPLEMENTATION.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  SECURITY_AUDIT_v4.15.0.md  SECURITY_CONTROLS_REFERENCE.md
docs/security/: AUDIT_LOGGING_IMPLEMENTATION_SUMMARY.md  DECOMPRESSION_BOMB_PROTECTION.md  LOGGING_IMPLEMENTATION.md  PII_REDACTION_IMPLEMENTATION.md  README.md  RESOURCE_LIMITS_IMPLEMENTATION.md  SECURITY_AUDIT_REPORT_v5.0.md  SECURITY_AUDIT_v4.15.0_SUMMARY.md  SECURITY_ERROR_HANDLING.md  SECURITY_FEATURES.md  SECURITY_VALIDATION.md  VALIDATION_CHECKLIST.md  WEB_UI_SECURITY_AUDIT.md
examples/: jitter_enhanced_poc.html  jitter_poc.html  poc_jitter_enhanced.py  poc_jitter_timeseries.py  resource_limits_demo.py
helm-chart/pcap-analyzer/: .helmignore  Chart.yaml  README.md  values.yaml
k8s/: mailhog.yaml
k8s/cert-manager/: clusterissuer-production.yaml  clusterissuer-staging.yaml
logs/: .gitignore
migrations/: 001_add_progress_tracking.sql
scripts/: README.md  analyze_audit_log.py  benchmark_cli_vs_web.py  benchmark_memory.py  capture_from_raspberry.sh  cleanup_docker.sh  db_helper.py  generate_invalid_pcap.py  generate_retransmission_pcap.py  generate_test_traffic.sh  init_db.sql  locustfile.py  profile_analysis.py  profile_packet_timeline_memory.py  raspi_remote_tcpdump.sh  rotate_logs.sh  run_remote_capture.sh  setup-letsencrypt.sh  simulate_attacks.py  simulate_ddos.py  simulate_dns_tunneling.py  test_audit_logging.py  test_logging.py  verify_docker_setup.sh
scripts/benchmarks/: README.md  benchmark_performance.py  compare_performance.py
src/: __init__.py  __version__.py  analyzer_factory.py  cli.py  config.py  report_generator.py  ssh_capture.py
templates/: report_template.html
tests/: README.md  __init__.py  benchmark_performance.py  compare_performance.py  conftest.py  test_auth.py  test_backward_compatibility.py  test_bpf_validation.py  test_csv_export.py  test_database_migration.py  test_duration_calculation_regression.py  test_edge_cases.py  test_health.py  test_health_score.py  test_html_report.py  test_integration.py  test_integration_sprint1.py  test_integration_sprint2.py  test_integration_sprint3.py  test_integration_sprint4.py  test_issue_12_negative_duration.py  test_jitter_analyzer.py  test_packet_timeline.py  test_packet_timeline_integration.py  test_path_validator.py  test_progress.py  test_property_based.py  test_protocol_distribution.py  test_rate_limiter.py  test_reports.py  test_result_sanitizer.py  test_retransmission_port_reuse.py  test_retransmission_timing_validation.py  test_security.py  test_security_audit.py  test_security_poc_exploits.py  test_service_classifier.py  test_syn_retransmission_stateful.py  test_tcp_handshake.py  test_tcp_state_machine.py  (+8 more)
(+271 files in other folders)
