# PCAP Analyzer - Modern Python Project Configuration
# PEP 518 - https://peps.python.org/pep-0518/

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap-analyzer"
dynamic = ["version"]
description = "Analyseur automatisé des causes de latence réseau"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PCAP Analyzer Contributors"}
]
keywords = ["network", "pcap", "analysis", "latency", "tcp", "dns", "icmp", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    # Core CLI dependencies
    "scapy>=2.5.0,<3.0",
    "dpkt>=1.9.8,<2.0",
    "paramiko>=3.4.0,<4.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1.2,<4.0",
    "rich>=13.7.0,<14.0",
    "click>=8.1.7,<9.0",
    "numpy>=1.24.0",  # NumPy 2.x compatible (tested with 2.0.2)
    "psutil>=5.9.0,<6.0",  # Sprint 10: Memory monitoring and system resource tracking
    # Web interface dependencies
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "httpx>=0.25.0",  # Required by TestClient for testing
    "python-multipart>=0.0.6",  # Upload multipart/form-data
    "aiofiles>=23.2.1",  # Async file operations
    "apscheduler>=3.10.0,<4.0",  # Cleanup scheduler
    "aiosqlite>=0.19.0,<1.0",  # SQLite async wrapper
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "flake8>=7.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12",
    "types-paramiko>=3.4.0",
    "pre-commit>=3.6.0",
    "hypothesis>=6.92.0",
    "bandit[toml]>=1.7.6",
    "interrogate>=1.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.92.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/MacFlurry/pcap_analyzer"
Documentation = "https://github.com/MacFlurry/pcap_analyzer#readme"
Repository = "https://github.com/MacFlurry/pcap_analyzer"
Issues = "https://github.com/MacFlurry/pcap_analyzer/issues"
Changelog = "https://github.com/MacFlurry/pcap_analyzer/blob/main/CHANGELOG.md"

[project.scripts]
pcap_analyzer = "src.cli:main"

[tool.setuptools]
packages = {find = {}}  # Auto-discover all packages
package-data = {"src" = ["templates/*.html", "templates/static/css/*.css"], "app" = ["templates/*.html", "static/**/*"]}

[tool.setuptools.dynamic]
version = {attr = "src.__version__.__version__"}

# Black - Code Formatter
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort - Import Sorter
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = ["venv", ".venv", "build", "dist"]

# mypy - Type Checker
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Will enable gradually
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scapy.*", "dpkt.*", "paramiko.*"]
ignore_missing_imports = true

# pytest - Testing Framework
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=src
    --cov-branch
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
"""
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage.py
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit - Security Linter
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls (false positives)

# Interrogate - Docstring Coverage
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 60
exclude = ["setup.py", "docs", "build", "tests"]
verbose = 1
quiet = false
whitelist-regex = []
color = true

# Ruff - Fast Python Linter (alternative to flake8)
[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
